<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="Register"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/line16"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:letterSpacing="0.04"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line16"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.16"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line25"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.26"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line80"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.8"
        android:orientation="horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_field"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@id/line25">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_field_inner"
            style="@style/MyTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/username_field">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field_inner"
            style="@style/MyTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_field"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/email_field">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_field_inner"
            style="@style/MyTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_field">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/MyTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@id/password_field"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/click_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_rectangle_24"
            />

        <TextView
            android:id="@+id/bycheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/click_rec"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/bycheck"
            android:layout_marginRight="3dp"
            android:layout_toRightOf="@id/click_rec"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="9.5sp"/>
        <TextView
            android:id="@+id/term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bycheck"
            android:text="@string/term"
            android:layout_marginRight="3dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="9.5sp"
            android:textColor="@color/blue"/>
        <TextView
            android:id="@+id/and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/term"
            android:text="@string/and"
            android:layout_marginRight="3dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="9.5sp" />
        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/and"
            android:text="@string/condition"
            android:fontFamily="@font/poppins_regular"
            android:textSize="9.5sp"
            android:textColor="@color/blue"/>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/button_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line80"
        android:layout_marginHorizontal="35dp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/button_reg" />
    <TextView
        android:id="@+id/reg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toTopOf="@id/button_reg"
        app:layout_constraintBottom_toBottomOf="@id/button_reg"
        app:layout_constraintRight_toRightOf="@id/button_reg"
        app:layout_constraintLeft_toLeftOf="@id/button_reg"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_text">
        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have"
            android:layout_marginRight="5dp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/poppins_regular"
            android:layout_toRightOf="@+id/text_login"
            android:textColor="@color/blue"
            android:textSize="12sp"/>
    </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>