<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extra_bold"
            android:letterSpacing="0.04"
            android:text="Login"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/line_30"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.3"
            android:orientation="horizontal"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line40"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="horizontal"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line80"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.8"
            android:orientation="horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_field"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="35dp"
            app:layout_constraintTop_toTopOf="@id/line40">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_content_field"
                style="@style/MyTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passsword_field"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/username_field">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_content_field"
                style="@style/MyTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/passsword_field"
            app:layout_constraintStart_toStartOf="@id/passsword_field"
            android:layout_marginTop="20dp">
            <ImageView
                android:id="@+id/click_rec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/outline_rectangle_24"
                />

            <TextView
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/click_rec"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:text="@string/remember"
                android:layout_toRightOf="@id/click_rec"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="9.5sp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/passsword_field"
            app:layout_constraintTop_toBottomOf="@id/passsword_field"
            android:layout_marginTop="20dp"
            android:text="@string/forgot"
            android:fontFamily="@font/poppins_regular"
            android:textSize="9.5sp"
            android:textColor="@color/blue"/>

        <ImageButton
            android:id="@+id/button_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line80"
            android:layout_marginHorizontal="35dp"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/button_reg"
            />
        <TextView
            android:id="@+id/log_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toTopOf="@id/button_reg"
            app:layout_constraintBottom_toBottomOf="@id/button_reg"
            app:layout_constraintRight_toRightOf="@id/button_reg"
            app:layout_constraintLeft_toLeftOf="@id/button_reg"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:flow_horizontalAlign="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_text">
            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baru"
                android:layout_marginRight="5dp"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/reg_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register"
                android:fontFamily="@font/poppins_regular"
                android:layout_toRightOf="@+id/text_login"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>